deps/chakrashim/core/test/Basics/bug650104.baseline
name: push -2885562136746910000number
undefined
TypeError: Object expected
	at Global code (bug650104.js:18:1)
